use SequencedCollection methods